--- a/TextWarp/Views/Gallery/Index.cshtml
+++ b/TextWarp/Views/Gallery/Index.cshtml
@@ -19,7 +19,7 @@
                     <div style="margin: 0 0.5rem;">
                         <i class="fa fa-search" style="font-size: 14px;color:#dad8dd"></i>
                     </div>
-                    <input type="text" class="search_input flex-grow-1" value="" placeholder="Search">
+                    <input type="text" id="search_input" class="search-input flex-grow-1" value="" placeholder="Search">
                 </div>
                 <div class="align-items-center col-md-3 col-sm-6 d-flex" style="padding-left: 3rem;color: #dad8dd;font-size: 14px;">
                     <div id="btn_select" class="btn_chooseTemplate" style="padding: 0 0.5rem;cursor:pointer;">
