--- a/TextWarp/Views/Shared/_GalleryLayout.cshtml
+++ b/TextWarp/Views/Shared/_GalleryLayout.cshtml
@@ -27,7 +27,7 @@
 </body>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/js/jQuery.tagify.min.js"></script>
-<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+<script src="~/js/jquery.autocomplete.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
 <script src="~/lib/fontawesome/js/all.min.js"></script>
 <script src="~/lib/bootstrap5/js/bootstrap.min.js"></script>
