--- a/TextWarp/Views/Shared/_GalleryLayout.cshtml
+++ b/TextWarp/Views/Shared/_GalleryLayout.cshtml
@@ -15,13 +15,8 @@
 <body style="height: 100vh;position: relative;">
     @RenderBody()
     <div class="d-none align-items-center justify-content-center w-100 h-100" id="loader">
-        <div class="loader">
-            <div class="face">
-                <div class="circle"></div>
-            </div>
-            <div class="face">
-                <div class="circle"></div>
-            </div>
+        <div>
+            <img src="~/imgs//loading.svg" style="width:80px;height:80px;"/>
         </div>
     </div>
 </body>
