--- a/TextWarp/Views/Warp/Index.cshtml
+++ b/TextWarp/Views/Warp/Index.cshtml
@@ -17,11 +17,12 @@
 <div class="d-flex justify-content-center align-items-center" style="position:relative;width: 100%;">
     <div class="align-items-end d-flex flex-column justify-content-center" style="width:200px;padding-right: 50px;">
         <div id="addFavourite" class="d-flex align-items-center justify-content-center" style="width:40px;height:40px;margin-bottom: 5px;cursor:pointer;">
-            <img src="~/imgs/heart.svg" class="mw-100 mh-100 iconImg" style="user-select:none;"/>
+            <img src="~/imgs/agone-Heart.svg" class="mw-100 mh-100 iconImg" style="user-select:none;" />
         </div>
-        <div id="edit" class="d-flex align-items-center justify-content-center" style="width:40px;height:40px;margin-top: 5px;cursor:pointer;">
+            <div id="edit" class="d-flex align-items-center justify-content-center" style="width:40px;height:40px;margin: 5px 0;cursor:pointer;">
             <img src="~/imgs/pen.svg" class="mw-100 mh-100 iconImg" style="user-select:none;" />
         </div>
+        <div id="editInfo" style="height:40px;margin-top: 5px;cursor:pointer; font-size:22px;">Edit Info</div>
     </div>
     <div class="vcarousel" style="height:100%; width:500px;">
         <div class="vcarousel-item"></div>
