--- a/TextWarp/Views/Shared/_CreateNewLayout.cshtml
+++ b/TextWarp/Views/Shared/_CreateNewLayout.cshtml
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
+
 <html>
 <head>
     <meta charset="UTF-8">
@@ -6,12 +7,11 @@
     <link href="~/lib/bootstrap5/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/stylesheet.css" rel="stylesheet">
     <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet">
-    <link href="~/css/wheelcolorpicker.css" rel="stylesheet" />
+    <link href="~/css/tagify.css" rel="stylesheet">
     <title>@ViewData["title"]</title>
     @await RenderSectionAsync("Styles", required: false)
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
-<body style="height:100vh;  width: 100vw;position:relative;overflow:hidden;">
+<body style="height: 100vh;position: relative;">
     <div class="d-flex flex-column" style="position:absolute; left:0; right:0;height: 100vh; width: 100vw">
         <div class="align-items-center d-flex justify-content-between" style="background-color: #6f6d70; height: 48px;z-index:101;">
             <div style="height:100%;width: 10rem; padding-left: 0.8rem; display: flex; align-items: center; justify-content: center;">
@@ -28,29 +28,16 @@
             @RenderBody()
         </div>
     </div>
-    <div id="svg_temp" style="position: fixed;left: -10000000px;top: -100000px;visibility:hidden;"></div>
-    <svg id="svg_container" xmlns="http://www.w3.org/2000/svg" style="position: fixed;left: -10000000px;top: -100000px;visibility:hidden;">
-        <defs>
-            <linearGradient id="sampleGradient" gradientTransform="rotate(1)" x1="0%" y1="50%" x2="100%" y2="50%" gradientUnits="userSpaceOnUse">
-                <stop offset="0%" id="first_color" stop-color="#6b6fff" />
-                <stop offset="100%" id="second_color" stop-color="#bc91c1" />
-            </linearGradient>
-        </defs>
-    </svg>
     <div class="d-none align-items-center justify-content-center w-100 h-100" id="loader">
         <div>
-            <img src="~/imgs//loading.svg" style="width:80px;height:80px;"/>
+            <img src="~/imgs//loading.svg" style="width:80px; height:80px;"/>
         </div>
     </div>
 </body>
-<script src="~/js/warp_asset/d3.v3.min.js"></script>
-<script src="~/js/warp_asset/svg-path-properties.min.js"></script>
-<script src="~/js/warp_asset/seperatePathGenerator.js"></script>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/js/jQuery.tagify.min.js"></script>
+@await RenderSectionAsync("Scripts", required: false)
 <script src="~/lib/fontawesome/js/all.min.js"></script>
 <script src="~/lib/bootstrap5/js/bootstrap.min.js"></script>
-<script src="~/js/jquery.wheelcolorpicker.js"></script>
-<script src="~/js/toolcool-range-slider.min.js"></script>
-<script src="~/js/warp_asset/app.js"></script>
-@await RenderSectionAsync("Scripts", required: false)
+<script src="~/js/CreateNewScript.js"></script>
 </html>
