changed redo/undo icon and spell

--- a/TextWarp/Views/Warp/Editor.cshtml
+++ b/TextWarp/Views/Warp/Editor.cshtml
@@ -23,8 +23,8 @@
                     <img class="toolbar-icon" id="spana" src="~/imgs/spana.png">
                 </div>
                 <div class="d-flex flex-column align-items-center justify-content-between side-toolBar" style="height: 25%;min-height: 52px;">
-                    <div id="undo" title="undo" class="btn_redo"><img style="width:100%;height:100%" src="~/imgs/rotate-left.png" /></div>
-                    <div id="redo" title="redo" class="btn_redo"><img style="width:100%;height:100%" src="~/imgs/rotate-right.png" /></div>
+                    <div id="undo" title="undo" class="btn_redo"><img style="width:100%;height:100%" src="~/imgs/rotate-right.png" /></div>
+                    <div id="redo" title="redo" class="btn_redo"><img style="width:100%;height:100%" src="~/imgs/rotate-left.png" /></div>
                 </div>
             </div>
             <div class="d-flex align-items-center h-100" style="padding-left:20px;">
