--- a/TextWarp/Views/Warp/CreateNew.cshtml
+++ b/TextWarp/Views/Warp/CreateNew.cshtml
@@ -22,7 +22,7 @@
 <div id="styleChooseView" class="sub-view d-none align-items-center d-flex justify-content-around w-100 h-100">
     <div class="align-items-center d-flex flex-column col-sm-12 col-md-9 col-lg-8 col-xl-8" style="z-index:101;">
         <div>
-            <label style="font-size: 28px;color: #9a9a9a;">Select your prefered shape</label>
+            <label style="font-size: 28px;color: #9a9a9a;">Select your preferred shape</label>
         </div>
         <div class="w-100 d-flex justify-content-between align-items-center" style="height: 300px;">
             <div class="style-tab h-100 d-flex align-items-center justify-content-center" data-pathIndex="0" style="position:relative; width:27%;z-index:101;">
