--- a/TextWarp/Views/Warp/CreateNew.cshtml
+++ b/TextWarp/Views/Warp/CreateNew.cshtml
@@ -7,7 +7,7 @@
 <div id="wordInputView" class="sub-view align-items-center d-flex justify-content-around w-100 h-100">
     <div class="align-items-center d-flex flex-column col-sm-12 col-md-9 col-lg-8 col-xl-6">
         <div>
-            <label id="messageWraper" style="font-size: 28px;color: #9a9a9a; visibility:hidden;">Enter up to 2 words here</label>
+            <label id="messageWrapper" style="font-size: 28px;color: #9a9a9a; visibility:hidden;">Enter up to 2 words here</label>
         </div>
         <div class="align-items-center d-flex flex-column w-100" style="padding: 85px 10px 50px 10px;">
             <input id="warp_words" name="tags" placeholder="Type a word and hit enter" value="" style="width:100%">
