changed icon sizes

--- a/TextWarp/Views/Warp/Index.cshtml
+++ b/TextWarp/Views/Warp/Index.cshtml
@@ -14,11 +14,11 @@
 <button id="btn_warpText" style="display:none;"></button>
 <button id="btn_warpEndHandler" style="display:none"></button>
 <div class="d-flex justify-content-center" style="position:relative;width: 100%;">
-    <div class="align-items-end d-flex flex-column justify-content-center" style="flex:1;padding-right: 50px;">
-        <div id="addFavourite" class="d-flex align-items-center justify-content-center" style="width:40px;height:40px;margin-bottom: 5px;cursor:pointer;">
+    <div class="align-items-end d-flex flex-column justify-content-center" style="flex:1;margin-right: 50px;">
+        <div id="addFavourite" class="d-flex align-items-center justify-content-center" style="width:32px;height:32px;margin-bottom: 5px;cursor:pointer;">
             <img src="~/imgs/agone-Heart.svg" class="mw-100 mh-100 iconImg" style="user-select:none;" />
         </div>
-            <div id="edit" class="d-flex align-items-center justify-content-center" style="width:40px;height:40px;margin: 5px 0;cursor:pointer;">
+            <div id="edit" class="d-flex align-items-center justify-content-center" style="width:32px;height:32px;margin: 5px 0;cursor:pointer;">
             <img src="~/imgs/pen.svg" class="mw-100 mh-100 iconImg" style="user-select:none;" />
         </div>
     </div>
@@ -26,7 +26,7 @@
         <div class="vcarousel-item"></div>
         <div class="vcarousel-item"></div>
     </div>
-        <div class="d-flex flex-column" style="flex:1;padding-left:50px">
+    <div class="d-flex flex-column" style="flex:1;margin-left:50px;overflow:auto;">
         <div id="myDesign">
             <div style="color:#6f6d70;font-family:Lato;">My Design</div>
             <div class="myDesign-container">
