--- a/TextWarp/wwwroot/css/stylesheet.css
+++ b/TextWarp/wwwroot/css/stylesheet.css
@@ -1008,7 +1008,7 @@ a:link, a:visited, a:hover {
     background: #737272;
 }
 .myDesign_svgs {
-    width: 250px;
+    width: 100%;
 }
 .myDesign-container {
     position: relative;
