working on aligh slick slider

--- a/TextWarp/Views/Warp/Index.cshtml
+++ b/TextWarp/Views/Warp/Index.cshtml
@@ -22,7 +22,7 @@
             <img src="~/imgs/pen.svg" class="mw-100 mh-100 iconImg" style="user-select:none;" />
         </div>
     </div>
-    <div class="vcarousel" style="height:100%; width:500px;">
+    <div class="vcarousel" style="height:calc( 100vh - 48px ); width:500px;">
         <div class="vcarousel-item"></div>
         <div class="vcarousel-item"></div>
     </div>
