fixed duplicated svg issues and add mediaid

--- a/TextWarp/Views/Shared/_EditorLayout.cshtml
+++ b/TextWarp/Views/Shared/_EditorLayout.cshtml
@@ -67,6 +67,7 @@
 <script src="~/lib/fontawesome/js/all.min.js"></script>
 <script src="~/lib/bootstrap5/js/bootstrap.min.js"></script>
 <script src="~/js/jquery.wheelcolorpicker.js"></script>
+<script src="~/js/common.js"></script>
 <script src="~/js/toolcool-range-slider.min.js"></script>
 <script src="~/js/warp_asset/app.js"></script>
 <script src="~/js/ActionScript.js"></script>
