--- a/TextWarp/Views/Warp/Index.cshtml
+++ b/TextWarp/Views/Warp/Index.cshtml
@@ -26,46 +26,55 @@
         <div class="vcarousel-item"></div>
         <div class="vcarousel-item"></div>
     </div>
-    <div class="d-flex flex-column" style="flex:1;margin-left:50px;overflow:auto;">
-        <div id="myDesign">
-            <div style="color:#6f6d70;font-family:Lato;">My Design</div>
-            <div class="myDesign-container">
-                <div class="myDesign_svgs" style="overflow:hidden;">
-                </div>
-                <div class="btn-slick-cnt" id="slick-prev">
-                    <svg class="mw-100 mh-100 svg-inline--fa fa-angle-left" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg="">
-                        <path fill="#fff" d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z">
-                        </path>
-                    </svg>
-                </div>
-                <div class="btn-slick-cnt" id="slick-next">
-                    <svg class="mw-100 mh-100 svg-inline--fa fa-angle-right" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-right" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg="">
-                        <path fill="#fff" d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
-                        </path>
-                    </svg>
-                </div>
-                <div class="delete-design">
-                    <svg class="svg-inline--fa fa-xmark" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="xmark" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg="">
-                        <path fill="#fff" d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z">
-                        </path>
-                    </svg>
+    <div class="d-flex justify-content-end" style="flex:1;margin-left:50px;overflow:auto;">
+        <div class="d-flex flex-column" style="width:258px;align-items: end;margin-right: 8px;">
+            <div id="myDesign">
+                <div style="color:#6f6d70;font-family:Lato;">My Design</div>
+                <div class="myDesign-container">
+                    <div class="myDesign_svgs" style="overflow:hidden;">
+                    </div>
+                    <div class="btn-slick-cnt" id="slick-prev">
+                        <svg class="mw-100 mh-100 svg-inline--fa fa-angle-left" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg="">
+                            <path fill="#fff" d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z">
+                            </path>
+                        </svg>
+                    </div>
+                    <div class="btn-slick-cnt" id="slick-next">
+                        <svg class="mw-100 mh-100 svg-inline--fa fa-angle-right" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-right" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg="">
+                            <path fill="#fff" d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
+                            </path>
+                        </svg>
+                    </div>
+                    <div class="delete-design">
+                        <svg class="svg-inline--fa fa-xmark" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="xmark" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg="">
+                            <path fill="#fff" d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z">
+                            </path>
+                        </svg>
+                    </div>
                 </div>
             </div>
-        </div>
         <div id="likes">
             <div style="color:#6f6d70;font-size:14px;font-family:Lato;">Likes</div>
-            <div id="like_svgs" class="d-flex flex-wrap" style="overflow:auto;">
+            <div class="d-flex justify-content-end" style="width: 210px;">
+                <div id="like_svgs" class="d-flex flex-wrap" style="overflow:auto;">
+                </div>
             </div>
         </div>
+        </div>
     </div>
+    
     <div class="d-flex justify-content-center align-items-center" style="position: absolute;left: 0;top: 0;height: 100px;width: 100%;">
         <div id="up" class="d-none align-items-center justify-content-center">
-            <i class="fa-solid fa-angle-up"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" height="30px" width="40px" version="1.1" id="Layer_1" viewBox="0 0 330 330" xml:space="preserve">
+                <path d="M325.606,229.393l-150.004-150C172.79,76.58,168.974,75,164.996,75c-3.979,0-7.794,1.581-10.607,4.394  l-149.996,150c-5.858,5.858-5.858,15.355,0,21.213c5.857,5.857,15.355,5.858,21.213,0l139.39-139.393l139.397,139.393  C307.322,253.536,311.161,255,315,255c3.839,0,7.678-1.464,10.607-4.394C331.464,244.748,331.464,235.251,325.606,229.393z" fill="#fff" />
+            </svg>
         </div>
     </div>
     <div class="d-flex justify-content-center align-items-center" style="position: absolute;left: 0;bottom: 0;height: 100px;width: 100%;">
         <div id="down" class="d-flex align-items-center justify-content-center">
-            <i class="fa-solid fa-angle-down"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" height="30px" width="40px" version="1.1" id="Layer_1" viewBox="0 0 330 330" xml:space="preserve">
+                <path d="M325.607,79.393c-5.857-5.857-15.355-5.858-21.213,0.001l-139.39,139.393L25.607,79.393  c-5.857-5.857-15.355-5.858-21.213,0.001c-5.858,5.858-5.858,15.355,0,21.213l150.004,150c2.813,2.813,6.628,4.393,10.606,4.393  s7.794-1.581,10.606-4.394l149.996-150C331.465,94.749,331.465,85.251,325.607,79.393z" fill="#fff" />
+            </svg>
         </div>
     </div>
 </div>
