--- a/TextWarp/wwwroot/css/stylesheet.css
+++ b/TextWarp/wwwroot/css/stylesheet.css
@@ -740,8 +740,8 @@ a:link, a:visited, a:hover {
     opacity: 1;
 }
 .vcarousel-item{
-    /*width:500px;
-    height:500px;*/
+    width:500px;
+    height:500px;
     display:flex !important;
     flex-direction:column;
     position:relative;
@@ -757,6 +757,7 @@ a:link, a:visited, a:hover {
 }
 .slick-slide{
     opacity: 0.4;
+    margin:40px 0;
 }
 .slick-slide.slick-current {
     opacity: 1;
@@ -898,8 +899,7 @@ a:link, a:visited, a:hover {
     position: relative;
     border: none;
     color: #ffffff;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
+    margin:0 0.5rem;
     text-decoration: none;
     z-index: 101;
     cursor: pointer;
@@ -932,7 +932,7 @@ a:link, a:visited, a:hover {
     justify-content: center;
     height: 40px;
     position:absolute;
-    bottom:50px;
+    bottom: -60px;
 }
 .btn-save-design {
     padding: 0 16px;
@@ -966,14 +966,15 @@ a:link, a:visited, a:hover {
 #likes.active{
     display:flex;
 }
-.like-item{
-    width:100px;
-    height:100px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    margin-right:1rem;
-    position:relative;
+.like-item {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    position: relative;
 }
 .delete-like {
     width: 20px;
@@ -1016,7 +1017,7 @@ a:link, a:visited, a:hover {
 }
 .myDesign-container {
     position: relative;
-    width: 250px;
+    width: 210px;
     aspect-ratio: 1 /1;
 }
 .design-item {
