--- a/TextWarp/Views/Gallery/Index.cshtml
+++ b/TextWarp/Views/Gallery/Index.cshtml
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex" style="height: 2rem;">
+            <div class="d-flex" style="height:32px;">
                 <div class="col-md-9 col-sm-6 d-flex align-items-center" id="msgWrapper" style="text-align:center;color:#ff0000;visibility:hidden;">
                 </div>
                 <div id="select_sub_menu" class="align-items-center col-md-3 col-sm-6" style="display:none;padding-left: 3rem;color: #dad8dd;font-size: 14px;">
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </div>
-            <div class="gallery-content d-flex overflow-auto flex-wrap" style="padding: 2rem 0.5rem;">
+            <div class="gallery-content d-flex overflow-auto flex-wrap" style="padding: 2rem 0;flex:1;">
                 <div id="createNewWarp">
                     <div class="gallery-item-img d-flex align-items-center justify-content-center" style="background: #dad8dd;">
                         <img src="~/imgs/plus_item.png" style="max-width: 100%;max-height: 100%;">
