--- a/TextWarp/Views/Shared/_Layout.cshtml
+++ b/TextWarp/Views/Shared/_Layout.cshtml
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
+@{string version = "1.01";}
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TextWarp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/TextWarp.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css?v=@version" asp-append-version="true" />
+    <link rel="stylesheet" href="~/TextWarp.styles.css?v=@version" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -44,7 +45,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/site.js?v=@version" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
